--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -1,6 +1,6 @@
 :root {
-    --max-site-container-width: 1400px; // for
-    --min-site-container-width: 360px;  // example
+    --max-site-container-width: 1400px;
+    --min-site-container-width: 360px;
 }
 
 body.dark {
