--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@
     ru: миксины для упрощения работы с медиа-запросами.
 
     Миксины с Above для применения стилей к экранам, начиная от определённой ширины и шире
-    (например, mobile-above для >= 768px), это типично для "mobile-first". Миксины без Above применяют стили к
+    (например, mobile-above для >= 768px), это типично для mobile-first. Миксины без Above применяют стили к
     экранам до определённой ширины и меньше (например, tablet для <= 1023px).
 
     Пример использования:
@@ -43,10 +43,10 @@
 
 
 
-    en: Mixins to simplify working with media queries.
+    en: mixins to simplify working with media queries.
 
     Mixins with Above apply styles to screens starting from a specific width and wider (e.g., mobile-above for >= 768px),
-    which is typical for a "mobile-first" approach. Mixins without Above apply styles to screens up to a specific
+    which is typical for a mobile-first approach. Mixins without Above apply styles to screens up to a specific
     width and narrower (e.g., tablet for <= 1023px).
 
     Example usage:
@@ -84,11 +84,6 @@
   white-space: nowrap !important;
   clip-path: inset(100%) !important;
   clip: rect(0 0 0 0) !important;
-  overflow: hidden !important;
-}
-
-.disable {
-  pointer-events: none !important;
   overflow: hidden !important;
 }
 
@@ -134,6 +129,21 @@
   }
 }
 
+/*
+    ru: данная конфигурация стилей ориентирована на формат сайта из трех элементов: header, main и footer,
+    где header вверху, main в центре, а footer в самом низу.
+
+    en: this style configuration is focused on the site format of three elements: header, main and footer.
+    Header is at the top, main is in the center, and footer is at the bottom.
+
+    | header |
+    |--------|
+    |  main  |
+    |        |
+    |        |
+    |--------|
+    | footer |
+*/
 html, body {
   height: 100%;
   scroll-behavior: smooth;
@@ -151,6 +161,10 @@ body {
 }
 
 #box {
+  /*
+      ru: отображение flexbox column для того, чтобы сразу прижать footer к низу страницы.
+      en: displaying a flexbox column in order to immediately press the footer to the bottom of the page.
+  */
   display: flex;
   flex-direction: column;
   min-height: 100%;
